# labmate

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  prd.md
integrations/claude-code/agents/: ml-researcher.md
integrations/claude-code/commands/: kagglethis.md
integrations/claude-code/plugin/: .mcp.json
integrations/claude-code/plugin/.claude-plugin/: plugin.json
integrations/claude-code/plugin/agents/: ml-researcher.md
integrations/claude-code/plugin/commands/: kagglethis.md
integrations/claude-code/plugin/skills/ml-research/: SKILL.md
integrations/claude-code/skills/ml-research/: SKILL.md
integrations/codex/agents/: ml-researcher.toml
integrations/codex/plugin/: .mcp.json
integrations/codex/plugin/.codex-plugin/: plugin.json
integrations/codex/plugin/skills/ml-research/: SKILL.md
src/labmate/: __init__.py  cli.py  contracts.py  init.py  mcp_server.py
src/labmate/resources/: AGENTS.md
src/labmate/resources/integrations/claude-code/agents/: kaggle-researcher.md  ml-researcher.md
src/labmate/resources/templates/: program.md
src/labmate/tools/: __init__.py  benchmarks.py  datasets.py  docs.py  experiments.py  github.py  kaggle.py  literature.py  projects.py  registry.py  workflows.py
templates/: program.md
tests/: test_benchmarks.py  test_cli.py  test_contracts.py  test_datasets.py  test_docs.py  test_experiments.py  test_github.py  test_init.py  test_kaggle.py  test_literature.py  test_mcp_server.py  test_projects.py  test_registry.py  test_workflows.py
(+10 files in other folders)
